<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:background="#ece7e7"
    android:layout_gravity="fill_horizontal"
    android:orientation="horizontal">
    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/topbar"
        android:layout_height="?attr/qmui_topbar_height"
        android:layout_columnSpan="4"
        />
    <EditText
        android:id="@+id/filler"
        android:textSize="16sp"
        android:layout_gravity="fill"
        android:maxLines="1"
        android:layout_marginTop="55sp"
        android:paddingRight="15sp"
        android:layout_columnSpan="4"
        android:gravity="right"
        android:singleLine="true"
        android:focusable="true"
        android:background="@null"
        android:visibility="invisible"
        />
    <EditText
        android:id="@+id/inputText"
        android:textSize="16sp"
        android:hint="@string/defaultText"
        android:layout_gravity="fill_horizontal"
        android:maxLines="1"
        android:layout_marginTop="55sp"
        android:paddingRight="15sp"
        android:layout_columnSpan="4"
        android:gravity="right"
        android:singleLine="true"
        android:focusable="true"
        />
    <Button
        android:id="@+id/btCE"
        android:text="@string/btCE"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:layout_columnWeight="1"
        android:background="@drawable/button_selector"
        android:layout_marginTop="2sp"
        android:layout_marginBottom="1sp"
        android:textColor="#FF0000"
        />
    <Button
        android:id="@+id/btBackspace"
        android:text="@string/btBackspace"
        android:textSize="15sp"
        android:background="@drawable/button_selector"
        android:layout_gravity="fill_horizontal"
        android:layout_marginRight="1sp"
        android:layout_columnWeight="1"
        android:gravity="center"
        android:layout_marginTop="2sp"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/btSqrt"
        android:text="@string/btSqrt"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginTop="2sp"
        android:layout_columnWeight="1"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/btDiv"
        android:text="/"
        android:textSize="15sp"
        android:layout_marginTop="2sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_columnWeight="1"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/bt7"
        android:text="7"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/bt8"
        android:text="8"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/bt9"
        android:text="9"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/btMul"
        android:text="*"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/bt4"
        android:text="4"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/bt5"
        android:text="5"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/bt6"
        android:text="6"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/btSub"
        android:text="-"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />

    <Button
        android:id="@+id/bt1"
        android:text="1"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/bt2"
        android:text="2"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/bt3"
        android:text="3"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/btAdd"
        android:text="+"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />

    <Button
        android:id="@+id/bt0"
        android:text="0"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/btPoint"
        android:text="."
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/btBrackets"
        android:text="(...)"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/btSolve"
        android:layout_rowSpan="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="#FF8C00"
        android:text="="
        android:textSize="15sp"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/btPow"
        android:text="x^y"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/btComma"
        android:text=","
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/btX"
        android:text="x"
        android:textSize="15sp"
        android:layout_row="2"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/btI"
        android:text="i"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/btConstants"
        android:text="@string/btConstants"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_columnSpan="2"
        android:layout_marginBottom="1sp"
        />

    <Button
        android:id="@+id/btFunctions"
        android:text="@string/btFunctions"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="1sp"
        />
    <Button
        android:id="@+id/btUndo"
        android:text="@string/btUndo"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        />
    <Button
        android:id="@+id/btRedo"
        android:text="@string/btRedo"
        android:textSize="15sp"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginRight="1sp"
        android:background="@drawable/button_selector"
        android:layout_columnSpan="2"
        />
</GridLayout>